--- a/css/localWeather.css
+++ b/css/localWeather.css
@@ -7,8 +7,14 @@ and open the template in the editor.
     Created on : 19-mai-2016, 15:06:32
     Author     : queni
 */
+html {
+  background: no-repeat center center fixed;
+  background-size: cover; }
+
 body {
-  background-color: lightblue; }
+  background-color: transparent;
+  /*background-color: lightblue;*/
+  /*#weatherInfo, #weatherInfo * {*/ }
   body #weatherThumbnail {
     margin-top: 50px; }
   body #weatherInfo {
@@ -18,6 +24,8 @@ body {
     max-width: 100%;
     max-height: 200px;
     /*margin: 80px 0;*/ }
+  body #weatherInfo li {
+    /*background-color: rgba(255,255,255,0.9);*/ }
   @media screen and (min-width: 768px) {
     body #weatherImg {
       margin: 80px 0; } }
