--- a/scss/localWeather.scss
+++ b/scss/localWeather.scss
@@ -7,8 +7,13 @@ and open the template in the editor.
     Created on : 19-mai-2016, 15:06:32
     Author     : queni
 */
+html {
+    background: no-repeat center center fixed;
+    background-size: cover;
+}
 body {
-    background-color: lightblue;
+    background-color:transparent;
+    /*background-color: lightblue;*/
     #weatherThumbnail {
         margin-top:50px;
     }
@@ -20,6 +25,10 @@ body {
         max-width: 100%;
         max-height: 200px;
         /*margin: 80px 0;*/
+    }
+    /*#weatherInfo, #weatherInfo * {*/
+    #weatherInfo li {
+        /*background-color: rgba(255,255,255,0.9);*/
     }
     @media screen and (min-width: 768px){
         #weatherImg {
