--- a/scss/localWeather.scss
+++ b/scss/localWeather.scss
@@ -36,3 +36,10 @@ body {
         }
     }
 }
+footer {
+        color: gray;   
+    a {
+        text-decoration: underline;
+        color: inherit;   
+    }
+}
